testsuite/tests/ghc-cpp/GhcCpp02.stderr
GhcCpp02.hs:5:1: error: [GHC-93098] #else without #if

GhcCpp02.hs:7:1: error: [GHC-93098] #endif without #if

